Fixed image visibility

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -2,7 +2,7 @@ $primary-color: #3c1a5b;
 $secondary-color: #fff748;
 $textures: url("https://www.transparenttextures.com/patterns/black-linen.png");
 $show-home-pic: true;
-$home-image: url(../../img/background.jpg);
+$home-image: url(../img/background.jpg);
 $bg-opacity: 0.6;
 
 @mixin easeOut {
