--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -87,6 +87,7 @@
     .portrait {
       max-width: auto;
       height: 100%;
+      background: url("../img/portrait.jpg");
     }
   }
 
